--- a/login-style.css
+++ b/login-style.css
@@ -45,10 +45,13 @@ input[type="text"]:focus,input[type="password"]:focus{
   border: 2px solid #2ecc71;
   padding: 14px 24px;
   outline: none;
-  color: white;
+  color: #2ecc71;
   border-radius: 24px;
   transition: 0.25s;
 }
-.active button:hover{
+.box  input[type="submit"]:hover{
+  color:#ffff;
   background: #2ecc71;
+  box-shadow:0 0 10px #2ecc71,0 0 40px #2ecc71,0 0 80px #2ecc71;
+  transition-delay: 0.5s;
 }
