--- a/login-style.css
+++ b/login-style.css
@@ -49,7 +49,7 @@ input[type="text"]:focus,input[type="password"]:focus{
   border-radius: 24px;
   transition: 0.25s;
 }
-.box  input[type="submit"]:hover{
+.active  input[type="submit"]:hover{
   color:#ffff;
   background: #2ecc71;
   box-shadow:0 0 10px #2ecc71,0 0 40px #2ecc71,0 0 80px #2ecc71;
