--- a/login-style.css
+++ b/login-style.css
@@ -20,7 +20,7 @@ color:white;
 text-transform: uppercase;
 text-align: center;
 }
-input[type="text"],input[type="password"]{
+.active input[type="text"],.active input[type="password"]{
 color:white;
   border:0;
   background: none;
@@ -33,10 +33,10 @@ color:white;
   border-radius: 20px;
   transition: 0.25s;
 }
-input[type="text"]:focus,input[type="password"]:focus{
+.active input[type="text"]:focus,.active input[type="password"]:focus{
   width:270px;
 }
- button{
+ .active input[type="submit"]{
   border:0;
   background: none;
   display: block;
