--- a/login-style.css
+++ b/login-style.css
@@ -10,9 +10,8 @@ h1{
   font-weight: bold;
 }
 .active{
-  width: 350px;
-padding: 20px;
-position: absolute;
+  width: 300px;
+  position: absolute;
 top: 50%;
 left: 20%;
 transform: translate(-50%,-50%);
@@ -45,13 +44,40 @@ color:white;
   border: 2px solid #2ecc71;
   padding: 14px 24px;
   outline: none;
-  color: #2ecc71;
+  color: white;
   border-radius: 24px;
   transition: 0.25s;
 }
-.active  input[type="submit"]:hover{
-  color:#ffff;
+ .active input[type="submit"]:hover{
+  color:#2ecc71;
   background: #2ecc71;
   box-shadow:0 0 10px #2ecc71,0 0 40px #2ecc71,0 0 80px #2ecc71;
   transition-delay: 0.1s;
+  color:white;
+}
+ a{
+  color:green;
+  width: 300px;
+  position: absolute;
+top: 64%;
+left: 14%;
+font-size: 16px;
+}
+a:hover{
+  color:red;
+  font-size: 20px;
+
+}
+.signup a{
+  color:green;
+  width: 300px;
+  position: absolute;
+top: 64%;
+left: 25%;
+font-size: 16px;
+
+}
+.signup a:hover{
+  color:red;
+  font-size: 20px;
 }
