--- a/login-style.css
+++ b/login-style.css
@@ -1,5 +1,5 @@
 body{
-  background-image:url(https://www.kothanalloorforanechurch.com/assets/images/secure.jpg);
+  background-image:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1iGVW3-Lob4hkJ9lHRXXE0rQmFvQQH9dSnw&usqp=CAU);
   background-repeat: no-repeat;
   background-size: 1800px 800px;
 }
